--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,6 +30,7 @@ html
             li(class=(title === 'Logout' ? "active" : ''))
               a(href='/users/logout') Logout
     .container
+      != messages()
       block content
       
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
